# Byakko-Writer

./: .gitignore  CLAUDE.md  README.md  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/prompts/: safety_guardrails.md  style_guide.md  summary_generation.md  system_core.md
src-tauri/prompts/agents/: compress_agent.md  conflict_detection.md  decision_agent.md  polish_agent.md  story_bible_group.md  story_bible_update.md  writer_agent.md
src-tauri/prompts/style/: analyze_writing_style.md  analyze_writing_style_system.md  summary_generation.md  writing_style_guide_template.md
src-tauri/prompts/tools/: _tool_calling_format.md  tool_chapter_content.md  tool_chapter_summary.md  tool_create_character.md  tool_get_character.md  tool_get_outline.md  tool_learn_writing_style.md  tool_list_chapters.md  tool_list_characters.md  tool_save_outline.md  tool_update_character.md
src-tauri/src/: db.rs  main.rs
src-tauri/src/commands/: ai_commands.rs  book_commands.rs  character_commands.rs  config_commands.rs  conflict_commands.rs  mod.rs  outline_commands.rs  snapshot_commands.rs  story_memory_commands.rs  style_commands.rs
src-tauri/src/models/: ai.rs  book.rs  character.rs  chat.rs  config.rs  conflict.rs  mod.rs  outline.rs  snapshot.rs  story_memory.rs  writing_style.rs
src-tauri/src/services/: agent_orchestrator.rs  ai_service.rs  auto_story_memory.rs  auto_style_service.rs  book_service.rs  character_service.rs  chat_service.rs  config_service.rs  conflict_service.rs  mod.rs  outline_service.rs  prompt_service.rs  (+6 more)
(+26 files in other folders)
