[package]
name = "byakko-writer"
version = "0.0.5-beta"
description = "白喵写作 - Byakko Writer"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
anyhow = "1.0.102"
once_cell = "1"

# 向量搜索使用轻量级替代方案（避免 LanceDB 的复杂依赖）
ndarray = "0.15"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"

# 日志框架
log = "0.4"
env_logger = "0.11"

# 随机数生成
rand = "0.8"

# 正则表达式
regex = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
